# SlidingConv

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SlidingConv.sln  demo.cpp  index.md
SlidingConv/: SlidingConv.vcxproj  SlidingConv.vcxproj.filters  main.cpp
SlidingConv/recfilter/: coefficients.cpp  iir_coeff.cpp  iir_coeff.h  modifiers.cpp  recfilter.cpp  recfilter.h  recfilter_internals.h  schedule.cpp  split.cpp  split.h  split_custom_sliding_single_multi_delta.cpp  split_custom_sliding_single_multi_delta_post_process.cpp  timing.cpp
SlidingConv/src/: SearchRadiusDCT.cpp  SearchRadiusDCT.h  SlidingConv.h  SlidingConvGetters.cpp  SlidingConvInput.cpp  SlidingConvOutput.cpp  SlidingConvRefVar.cpp  SlidingConvSetters.cpp  computeCoeffDCT.h
SlidingConv/util/: HalideWithOpenCV.h
recfilter/: coefficients.h  modifiers.cpp  modifiers.h  recfilter.cpp  recfilter.h  recfilter_utils.cpp  reorder.cpp  split_custom_sliding_single.cpp  split_custom_sliding_single_post_process.cpp  timing.h
src/: ScheduleInfo.h  SlidingConv.h  SlidingConvRefExpr.cpp  SlidingConvRefSchedule.cpp  SlidingConvSchedule.cpp  computeCoeffDCT.cpp  computeSlidingFunc.cpp  search1D.hpp
